--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
+<app-header></app-header>
 <div class="container">
-    <div class="jumbotron">
-      <h1>Welcome</h1>
-      <h2>Angular & Bootstrap Demo</h2>
+  <div class="row">
+    <div class="col-xs-5">
+      <app-recipe-list></app-recipe-list>
+      <app-recipe-item></app-recipe-item>
     </div>
-    <div class="panel panel-primary">
-      <div class="panel-heading">Status</div>
-      <div class="panel-body">
-        <h3>{{title}}</h3>
-      </div>
+    <div class="col-xs-7">
+      <app-recipe-details></app-recipe-details>
     </div>
   </div>
+</div>
 
